--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,5 +5,5 @@
     <color name="colorAccent">#FF4081</color>
     <color name="Pink">#e91e63</color>
     <color name="tab_false">#9B9B9B</color>
-    <color name="tab_true">#367CDF</color>
+    <color name="tab_true">#000000</color>
 </resources>
