--- a/app/src/main/res/drawable/reference_selector.xml
+++ b/app/src/main/res/drawable/reference_selector.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:state_checked="false" android:drawable="@drawable/reference1h"></item>
-    <item android:state_checked="true" android:drawable="@drawable/reference2h"></item>
+    <item android:state_checked="false" android:drawable="@drawable/banka3x"></item>
+    <item android:state_checked="true" android:drawable="@drawable/banka_d3x"></item>
 </selector>
